--- a/index.html
+++ b/index.html
@@ -202,27 +202,23 @@ document.getElementById("abstract").style.display="none";
 
   <DIV id="abstract">
 
-<h2> Jonathan Mah </h2>
+<h2> Michael Wasney </h2>
 <hr>
-<img src = "MW-deathvalley.jpg" width = "30%" height = "30%" style="float:left;margin:0 15px 0 0px;">
+<img src = "MW-deathvalley.jpg" width = "50%" height = "50%" style="float:left;margin:0 15px 0 0px;">
 <p>
   I am a computational evolutionary biologist interested in the eco-evolutionary forces 
-  that shape genetic diversity in natural populations, with an emphasis on microbial populations. I am currently a PhD candidate at UCLA, working in the 
+  that shape genetic diversity in natural populations, with an emphasis on microbial populations. As a PhD candidate in UCLA's Genetics & Genomics program, I work in the 
   <a href="https://garud.eeb.ucla.edu/"
     class = "minlink">Garud Lab</a>
-  in UCLA's department of Ecology and Evolutionary Biology, where I research the spatial distribution of genetic diversity in the gut microbiome, 
+  researching the spatial distribution of genetic diversity in the gut microbiome, 
   the dynamics of adaptation in the context of microbial invasion, and other topics. 
   </p>
 
   <p>
-  I am also interested in science pedagogy. As a PhD student at UCLA, I have tought a variety of courses at UCLA on subjects ranging on population genetics to computational analysis of microbial sequencing data. 
-  I also have served as a mentor to undergraduate participating in the 
+  I am also interested in science pedagogy. As a PhD student at UCLA, I have undertaken a variety of mentorship opportunites, both as a teach assistant and 
+  one-on-one mentor in several of UCLA's summer research experience for undergraduate (REU) programs (e.g., 
   <a href="https://qcb.ucla.edu/big-summer/"
-    class = "minlink">Bruins-In-Genomics (B.I.G) Summer Program</a>
-  and the 
-  <a href="https://bioscience.ucla.edu/bsp/"
-    class = "minlink">Bioscience Scholars Program (BSP)</a>, two summer research experience for undergraduates (REU) programs hosted by UCLA, 
-  the latter which focuses on providing research experiences to students from underrepresented minority groups. 
+    class = "minlink">Bruins-In-Genomics (B.I.G) Summer Program</a>).
   I am passionate about using my position in academia to make STEM education more accessible to the next generation of potential scientists.
 </p>
   </DIV>
