--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ document.getElementById("abstract").style.display="none";
   <a href="https://garud.eeb.ucla.edu/"
     class = "minlink">Garud Lab</a>
   researching the spatial distribution of genetic diversity in the gut microbiome, 
-  the dynamics of adaptation in the context of microbial invasion, and other topics. 
+  the dynamics of adaptation in the context of microbial invasion, and other topics related to microbial ecology and evolution. 
   </p>
 
   <p>
