--- a/index.html
+++ b/index.html
@@ -250,17 +250,21 @@ You can also find me on Bluesky, <a href="https://bsky.app/profile/michaelwasney
 <h2>Research</h2>
     <hr>
 
-Here are some of the projects I have worked on over the past several
-  years.
+<p style="font-size: 18px; font-weight: bold;">
+  Here are some of the projects I have worked on over the past several years.
+</p>
   <br>
  <hr>
-<em> Uniform bacterial genetic diversity along the guts of mice inoculated with human stool </em> [In review]
+<em><strong>Uniform bacterial genetic diversity along the guts of mice inoculated with human stool</strong></em> [In review]
   <br><br>  <u>Michael Wasney</u>*,  Leah Briscoe*, Richard Wolff, Hans Ghezzi,  Carolina Tropini,  Nandita Garud
 <br><br>
 
 
  <hr>
-<em> Single-cell genomics improves the discovery of risk variants and genes of atrial fibrillation. </em> [Manuscript Expected by September 2020] <br><br> Alan Selewa, Kaixuan Luo, <u>Michael Wasney</u>, Linsin Smith, Xiaotong Sun, Chenwei Tang, Heather Eckart, Ivan P. Moskowitz, Anindita Basu, Xin He & Sebastian Pott  <br><br>
+<em><strong>Single-cell genomics improves the discovery of risk variants and genes of atrial fibrillation</strong></em> 
+[<a href="https://www.nature.com/articles/s41467-023-40505-5" target="_blank">Nature Communications, 2023</a>] 
+<br><br> 
+<u>Michael Wasney</u>, Leah Briscoe*, Richard Wolff, Hans Ghezzi, Carolina Tropini, Nandita Garud, Alan Selewa, Kaixuan Luo, Linsin Smith, Xiaotong Sun, Chenwei Tang, Heather Eckart, Ivan P. Moskowitz, Anindita Basu, Xin He & Sebastian Pott
 
  <hr>
 
