--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ You can also find me on Bluesky, <a href="https://bsky.app/profile/michaelwasney
 <hr>
 I have been fortunate to receive funding support from:<br>
 <a href = "https://www.uclahealth.org/departments/medicine/gastro/microbiome">
-<img src= "glmc.png" width="50%" height="50%" style="float:left margin: 2px"></a>
+<img src= "GLMC.png" width="50%" height="50%" style="float:left margin: 2px"></a>
   
 <hr>
 [<a href="CV_2025.pdf" class="minlink" onClick="ga('send', 'pageview', 'cv.pdf');">Download full CV</a>]
