--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@ document.getElementById("abstract").style.display="none";
 <li>E-mail:
   <a href="mailto:michaelwasney@ucla.edu"
     class = "minlink">michaelwasney@ucla.edu</a><br>
-<li>Office: Life Sciences Building, 4114<br>UCLA<br>Los Angeles, CA 90095<br></li>
+<li>Office: Life Sciences Building, 4114<br>
+      <div style="margin-left: 20px;">UCLA<br>Los Angeles, CA 90095<br></div>
+    </li>
 <li>Github:
   <a href="https://github.com/michaelwasney"
     class = "minlink"> michaelwasney</a><br>
@@ -241,7 +243,7 @@ document.getElementById("abstract").style.display="none";
 </ul>
 
 You can also find me on Bluesky, <a href="https://bsky.app/profile/michaelwasney.bsky.social" class =
-    "minlink">@michaelwasney.bsky.social</a>. <br> <br>
+    "minlink">@michaelwasney.bsky.social</a> <br> <br>
 
 </DIV>
 
