--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ document.getElementById("abstract").style.display="none";
 <li>E-mail:
   <a href="mailto:michaelwasney@ucla.edu"
     class = "minlink">michaelwasney@ucla.edu</a><br>
-<li>Office: Life Sciences Building, 4114<br>
+<li>Office: Life Sciences Building 4114<br>
       <div style="margin-left: 40px;">UCLA<br>Los Angeles, CA 90095<br></div>
     </li>
 <li>Github:
