--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ You can also find me on Bluesky, <a href="https://bsky.app/profile/michaelwasney
 <h2>Brief CV </h2>
 
 <hr>
-<ul>
+<ul style="list-style: none;">
 <li><b>Current: PhD Genetics & Genomics, UCLA, 2021-present<br>
 </ul>
 
