--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ You can also find me on Bluesky, <a href="https://bsky.app/profile/michaelwasney
 </p>
   <br>
  <hr>
-<em><strong>Uniform bacterial genetic diversity along the guts of mice inoculated with human stool</strong></em> [In review]
+<em><strong>Uniform bacterial genetic diversity along the guts of mice inoculated with human stool</strong></em> [<a href="https://www.biorxiv.org/content/10.1101/2025.01.28.635365v1" target="_blank">In review</a>]
   <br><br>  <u>Michael Wasney</u>*,  Leah Briscoe*, Richard Wolff, Hans Ghezzi,  Carolina Tropini,  Nandita Garud
 <br><br>
 
