--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ document.getElementById("abstract").style.display="none";
   one-on-one mentor in several of UCLA's summer research experience for undergraduate (REU) programs (e.g., 
   <a href="https://qcb.ucla.edu/big-summer/"
     class = "minlink">Bruins-In-Genomics (B.I.G) Summer Program</a>).
-  I am passionate about using my position in academia to make STEM higher education more accessible to the next generation of scientists.
+  I am passionate about using my position in academia to make STEM higher education more accessible.
 </p>
   </DIV>
 
