--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ You can also find me on Bluesky, <a href="https://bsky.app/profile/michaelwasney
 <em><strong>Single-cell genomics improves the discovery of risk variants and genes of atrial fibrillation</strong></em> 
 [<a href="https://www.nature.com/articles/s41467-023-40505-5" target="_blank">Nature Communications, 2023</a>] 
 <br><br> 
-<u>Michael Wasney</u>, Leah Briscoe*, Richard Wolff, Hans Ghezzi, Carolina Tropini, Nandita Garud, Alan Selewa, Kaixuan Luo, Linsin Smith, Xiaotong Sun, Chenwei Tang, Heather Eckart, Ivan P. Moskowitz, Anindita Basu, Xin He & Sebastian Pott
+Alan Selewa, Kaixuan Luo, <u>Michael Wasney</u>, Linsin Smith, Xiaotong Sun, Chenwei Tang, Heather Eckart, Ivan P. Moskowitz, Anindita Basu, Xin He & Sebastian Pott
 
  <hr>
 
