--- a/index.html
+++ b/index.html
@@ -207,20 +207,13 @@ document.getElementById("abstract").style.display="none";
 <img src = "BOYER_headshot.JPG" width = "50%" height = "50%" style="float:left;margin:0 15px 0 0px;">
 <p>
   I am a computational evolutionary biologist interested in the eco-evolutionary forces 
-  that shape genetic diversity in natural populations, with an emphasis on microbial populations. As a PhD candidate in UCLA's Genetics & Genomics program, I work in the 
+  that shape genetic diversity in microbial populations. As a PhD candidate in UCLA's Genetics & Genomics program, I work in the 
   <a href="https://garud.eeb.ucla.edu/"
     class = "minlink">Garud Lab</a>
   researching the spatial distribution of genetic diversity in the gut microbiome, 
   the dynamics of adaptation in the context of microbial invasion, and other topics related to microbial ecology and evolution. 
   </p>
 
-  <p>
-  I am also interested in science pedagogy. As a PhD student at UCLA, I have undertaken a variety of mentorship opportunites, both as a teach assistant and 
-  one-on-one mentor in several of UCLA's summer research experience for undergraduate (REU) programs (e.g., 
-  <a href="https://qcb.ucla.edu/big-summer/"
-    class = "minlink">Bruins-In-Genomics (B.I.G) Summer Program</a>).
-  I am passionate about using my position in academia to make STEM higher education more accessible for the next generation of scientists.
-</p>
   </DIV>
 
 
