--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@ document.getElementById("abstract").style.display="none";
 <img src = "BOYER_headshot.JPG" width = "50%" height = "50%" style="float:left;margin:0 15px 0 0px;">
 <p>
   I am a computational evolutionary biologist interested in the eco-evolutionary forces 
-  that shape genetic diversity in microbial populations. As a PhD candidate in UCLA's Genetics & Genomics program, I work in the 
+  that shape genetic diversity in natural populations. Currently, I am pursuing my PhD in the 
   <a href="https://garud.eeb.ucla.edu/"
-    class = "minlink">Garud Lab</a>
-  researching the spatial distribution of genetic diversity in the gut microbiome, 
+    class = "minlink">Garud Lab</a>,
+  where I research the spatial distribution of bacterial genetic diversity in the gut microbiome, 
   the dynamics of adaptation in the context of microbial invasion, and other topics related to microbial ecology and evolution. 
   </p>
 
