--- a/index.html
+++ b/index.html
@@ -201,20 +201,21 @@ document.getElementById("abstract").style.display="none";
 
 
   <DIV id="abstract">
+  <h2> Michael Wasney </h2>
+  <hr>
 
-<h2> Michael Wasney </h2>
-<hr>
-<img src = "BOYER_headshot.JPG" width = "50%" height = "50%" style="float:left;margin:0 15px 0 0px;">
-<p>
-  I am a computational evolutionary biologist interested in the eco-evolutionary forces 
-  that shape genetic diversity in natural populations. Currently, I am pursuing my PhD in the 
-  <a href="https://garud.eeb.ucla.edu/"
-    class = "minlink">Garud Lab</a>,
-  where I research the spatial distribution of bacterial genetic diversity in the gut microbiome, 
-  the dynamics of adaptation in the context of microbial invasion, and other topics related to microbial ecology and evolution. 
-  </p>
-
-  </DIV>
+  <div style="display: flex; align-items: center; gap: 15px;">
+    <img src="BOYER_headshot.JPG" width="50%" height="50%">
+    
+    <p style="margin: 0;">
+      I am a computational evolutionary biologist interested in the eco-evolutionary forces 
+      that shape genetic diversity in natural populations. Currently, I am pursuing my PhD in the 
+      <a href="https://garud.eeb.ucla.edu/" class="minlink">Garud Lab</a>,
+      where I research the spatial distribution of bacterial genetic diversity in the gut microbiome, 
+      the dynamics of adaptation in the context of microbial invasion, and other topics related to microbial ecology and evolution.
+    </p>
+  </div>
+</DIV>
 
 
 
