--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ document.getElementById("abstract").style.display="none";
     <p style="margin: 0;">
       I am a computational evolutionary biologist interested in the eco-evolutionary forces 
       that shape genetic diversity in natural populations. Currently, I am pursuing my PhD in the 
-      <a href="https://garud.eeb.ucla.edu/" class="minlink">Garud Lab</a>,
+      <a href="https://garud.eeb.ucla.edu/" class="minlink">Garud Lab</a> at UCLA,
       where I research the spatial distribution of bacterial genetic diversity in the gut microbiome, 
       the dynamics of adaptation in the context of microbial invasion, and other topics related to microbial ecology and evolution.
     </p>
