--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ document.getElementById("abstract").style.display="none";
 <BODY>
 
 
-<!--<img src="BOYER_headshot.JPG" width="50%" height="50%"><br>-->
+<!--<img src="BOYER_headshot_long.JPG" width="50%" height="50%"><br>-->
 <DIV class="bar">
 
 
@@ -205,7 +205,7 @@ document.getElementById("abstract").style.display="none";
   <hr>
 
   <div style="display: flex; align-items: center; gap: 15px;">
-    <img src="BOYER_headshot.JPG" width="50%" height="50%">
+    <img src="BOYER_headshot_long.JPG" width="50%" height="50%">
     
     <p style="margin: 0;">
       I am a computational evolutionary biologist interested in the eco-evolutionary forces 
