--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ document.getElementById("abstract").style.display="none";
     <img src="BOYER_headshot_long.JPG" width="50%" height="50%">
     
     <p style="margin: 0;">
-      I am a computational evolutionary biologist interested in the eco-evolutionary forces 
+      I am a computational biologist interested in the eco-evolutionary forces 
       that shape genetic diversity in natural populations. Currently, I am pursuing my PhD in the 
       <a href="https://garud.eeb.ucla.edu/" class="minlink">Garud Lab</a> at UCLA,
       where I research the spatial distribution of bacterial genetic diversity in the gut microbiome, 
