--- a/index.html
+++ b/index.html
@@ -228,16 +228,16 @@ document.getElementById("abstract").style.display="none";
   <a href="mailto:michaelwasney@ucla.edu"
     class = "minlink">michaelwasney@ucla.edu</a><br>
 <li>Office: Life Sciences Building 4114<br>
-      <div style="margin-left: 53px;">UCLA<br>Los Angeles, CA 90095<br></div>
+      <div style="margin-left: 55px;">UCLA<br>Los Angeles, CA 90095<br></div>
     </li>
 <li>Github:
   <a href="https://github.com/michaelwasney"
-    class = "minlink"> michaelwasney</a><br>
+    class = "minlink">michaelwasney</a><br>
+<li>Bluesky:
+  <a href="https://bsky.app/profile/michaelwasney.bsky.social"
+    class = "minlink">@michaelwasney.bsky.social</a><br>
 
 </ul>
-
-You can also find me on Bluesky, <a href="https://bsky.app/profile/michaelwasney.bsky.social" class =
-    "minlink">@michaelwasney.bsky.social</a> <br> <br>
 
 </DIV>
 
@@ -247,7 +247,7 @@ You can also find me on Bluesky, <a href="https://bsky.app/profile/michaelwasney
     <hr>
 
 <p style="font-size: 18px; font-weight: bold;">
-  Here are some of the projects I have worked on over the past several years.
+  Here are some of the projects I have worked on over the past several years:
 </p>
   <br>
  <hr>
