--- a/index.html
+++ b/index.html
@@ -245,13 +245,9 @@ document.getElementById("abstract").style.display="none";
 <DIV id="research">
 <h2>Research</h2>
     <hr>
-
-<p style="font-size: 18px; font-weight: bold;">
-  Here are some of the projects I have worked on over the past several years:
-</p>
   <br>
  <hr>
-<em><strong>Uniform bacterial genetic diversity along the guts of mice inoculated with human stool</strong></em> [<a href="https://www.biorxiv.org/content/10.1101/2025.01.28.635365v1" target="_blank">In review</a>]
+<em><strong>Uniform bacterial genetic diversity along the gut</strong></em> [<a href="https://www.biorxiv.org/content/10.1101/2025.01.28.635365v2" target="_blank">Accepted in principle, <em>Nature Communications</em></a>]
   <br><br>  <u>Michael Wasney</u>*,  Leah Briscoe*, Richard Wolff, Hans Ghezzi,  Carolina Tropini,  Nandita Garud
 <br><br>
 
