--- a/index.html
+++ b/index.html
@@ -247,14 +247,14 @@ document.getElementById("abstract").style.display="none";
     <hr>
   <br>
  <hr>
-<em><strong>Uniform bacterial genetic diversity along the gut</strong></em> [<a href="https://www.biorxiv.org/content/10.1101/2025.01.28.635365v2" target="_blank">Accepted in principle, <em>Nature Communications</em></a>]
+<em><strong>Uniform bacterial genetic diversity along the gut</strong></em> [<a href="https://www.biorxiv.org/content/10.1101/2025.01.28.635365v2" target="_blank"><em>Nature Communications</em>, Accepted in principle</a>]
   <br><br>  <u>Michael Wasney</u>*,  Leah Briscoe*, Richard Wolff, Hans Ghezzi,  Carolina Tropini,  Nandita Garud
 <br><br>
 
 
  <hr>
 <em><strong>Single-cell genomics improves the discovery of risk variants and genes of atrial fibrillation</strong></em> 
-[<a href="https://www.nature.com/articles/s41467-023-40505-5" target="_blank">Nature Communications, 2023</a>] 
+[<a href="https://www.nature.com/articles/s41467-023-40505-5" target="_blank"><em>Nature Communications</em>, 2023</a>] 
 <br><br> 
 Alan Selewa, Kaixuan Luo, <u>Michael Wasney</u>, Linsin Smith, Xiaotong Sun, Chenwei Tang, Heather Eckart, Ivan P. Moskowitz, Anindita Basu, Xin He & Sebastian Pott
 
